crates/pg_syntax/tests/snapshots/postgres_regress/partition_prune@36.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: create table rlp3_default partition of rlp3 default;
---
CreateStmt@0..52
  Create@0..6 "create"
  Whitespace@6..7 " "
  Table@7..12 "table"
  Whitespace@12..13 " "
  RangeVar@13..25
    Ident@13..25 "rlp3_default"
  Whitespace@25..26 " "
  Partition@26..35 "partition"
  Whitespace@35..36 " "
  Of@36..38 "of"
  Whitespace@38..39 " "
  RangeVar@39..43
    Ident@39..43 "rlp3"
  Whitespace@43..44 " "
  PartitionBoundSpec@44..51
    Default@44..51 "default"
  Ascii59@51..52 ";"

