crates/pg_syntax/tests/snapshots/postgres_regress/partition_prune@361.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: create table tprt_6 partition of tprt for values from (4001) to (5001);
---
CreateStmt@0..71
  Create@0..6 "create"
  Whitespace@6..7 " "
  Table@7..12 "table"
  Whitespace@12..13 " "
  RangeVar@13..19
    Ident@13..19 "tprt_6"
  Whitespace@19..20 " "
  Partition@20..29 "partition"
  Whitespace@29..30 " "
  Of@30..32 "of"
  Whitespace@32..33 " "
  RangeVar@33..37
    Ident@33..37 "tprt"
  Whitespace@37..38 " "
  For@38..41 "for"
  Whitespace@41..42 " "
  Values@42..48 "values"
  Whitespace@48..49 " "
  PartitionBoundSpec@49..69
    From@49..53 "from"
    Whitespace@53..54 " "
    Ascii40@54..55 "("
    AConst@55..59
      Iconst@55..59 "4001"
    Ascii41@59..60 ")"
    Whitespace@60..61 " "
    To@61..63 "to"
    Whitespace@63..64 " "
    Ascii40@64..65 "("
    AConst@65..69
      Iconst@65..69 "5001"
  Ascii41@69..70 ")"
  Ascii59@70..71 ";"

